Can't remember the changes.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17300,3 +17300,7 @@ html .bg--parallax {
   display: flex;
   align-items: center;
 }
+
+.spinner-grow {
+  vertical-align: middle !important;
+}
